--- a/index.html
+++ b/index.html
@@ -595,11 +595,11 @@
                 <div class="profile-img">DS</div>
                 <div class="profile-content">
                     <h1>DEEPANRAJ S</h1>
-                    <p class="tagline">Design Engineer | 3D Modeling Specialist | Marine & Railway Engineering</p>
+                    <p class="tagline">Design Engineer | 3D Modeling Specialist | Marine Engineering</p>
                     <div class="contact-links">
                         <a href="tel:+919600461558">📱 +91 9600461558</a>
                         <a href="mailto:deepanraj025@gmail.com">📧 Email</a>
-                        <a href="https://www.linkedin.com/in/deepanraj" target="_blank">💼 LinkedIn</a>
+                        <a href="https://www.linkedin.com/in/deepan-raj-139812161/" target="_blank">💼 LinkedIn</a>
                     </div>
                 </div>
             </div>
